--- a/session 27/tsconfig.json
+++ b/session 27/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "src/components/Excersice1.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
